Update some code

--- a/app/views/apply/_form.html.erb
+++ b/app/views/apply/_form.html.erb
@@ -1,3 +1,5 @@
+<h1>This is form</h1>
+
 <%= form_with(model: apply) do |form| %>
   
     <div>
@@ -33,4 +35,3 @@
       <%= form.submit "Apply" %>
     </div>
 <% end %>
-  
