--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -12,8 +12,8 @@
     <div class="content text-serif f4">
       <%= @job.description.html_safe %>
     </div>
-
-    <%= link_to 'Apply to this job', apply_job_path, class:"button is-rounded is-large is-fullwidth is-link" %>
+  
+    <%= link_to 'Apply to this job', new_apply_path(params[:id]), class:"button is-rounded is-large is-fullwidth is-link" %>
     
 
   </div>
@@ -34,7 +34,7 @@
         <li class="pv1 inline-block">
           <%= link_to 'Edit', edit_job_path(@job), class: 'button is-small is-link is-outlined' %></li>
         <li class="pv1 inline-block">
-          <%= link_to 'Delete', @job, method: :delete, data: { confirm: 'Are you sure?' }, class: 'button is-small is-link is-outlined' %></li>
+          <%= button_to 'Delete', @job, method: :delete, data: { confirm: 'Are you sure?' }, class: 'button is-small is-link is-outlined' %></li>
       </ul>
     <% end %>
   </div>
