--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -7,6 +7,7 @@
     <ul class="list pb4">
       <li class="inline-block f6 pr2"><%= @job.job_category %></li>
       <li class="inline-block f6 ph2"><i class="fa fa-pin"></i> <%= @job.location %></li>
+      <li class="inline-block f6 pr2"><%= @job.salary %>LPA</li>
     </ul>
 
     <div class="content text-serif f4">
@@ -23,6 +24,7 @@
     
 
     <h5 class="is-5 has-text-centered"><%= @job.job_author %></h5>
+
 
 
     
