--- a/app/views/layouts/navigation/_collapsible_elements.html.erb
+++ b/app/views/layouts/navigation/_collapsible_elements.html.erb
@@ -3,14 +3,19 @@
 <div class="collapse navbar-collapse navbar-right" id="navbar-collapsible-content">
   <ul class="nav navbar-nav ">
     <% if user_signed_in? %>
-      <% if current_user.admin == true%>
+      
+      <% if current_user.role == true%>
          <%= link_to 'Post Job', new_job_path, class: 'navbar-brand'%>
+      <% else %>
+         
+         <%= link_to 'My Application', apply_index_path, class: 'navbar-brand'%> 
+         
       <% end %>
       
       <li class="dropdown pc-menu">
         <a id="user-settings" class="dropdown-toggle" data-toggle="dropdown" href="#">
           <span id="user-name"><%= current_user.name %></span>
-          <span class="caret"></span>
+
         </a>
 
         <ul class="dropdown-menu" role="menu">
