--- a/app/views/layouts/navigation/_collapsible_elements.html.erb
+++ b/app/views/layouts/navigation/_collapsible_elements.html.erb
@@ -4,7 +4,8 @@
   <ul class="nav navbar-nav ">
     <% if user_signed_in? %>
       
-      <% if current_user.role == true%>
+      <% if current_user.role == true %>
+         <%= link_to 'Job Request', new_job_path, class: 'navbar-brand'%>
          <%= link_to 'Post Job', new_job_path, class: 'navbar-brand'%>
       <% else %>
          
