--- a/app/views/layouts/navigation/_header.html.erb
+++ b/app/views/layouts/navigation/_header.html.erb
@@ -1,12 +1,20 @@
 <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar">Hello</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
+      
       <%= link_to 'JobExpert', root_path, class: 'navbar-brand' %>
       <%= link_to 'All Jobs',  jobs_path, class: 'navbar-brand' %>
+
+      <% if user_signed_in? %>
+      
+        <% if current_user.role == true %>
+        
+            <%= link_to 'My Jobs', my_jobs_jobs_path, class: 'navbar-brand'%>
+            <%= link_to 'Requests', apply_index_path, class: 'navbar-brand'%>
+            
+        <% end %>
+
+      
+         
+      <% end %>
       
       
 </div>
