update some validations

--- a/app/views/apply/_form.html.erb
+++ b/app/views/apply/_form.html.erb
@@ -23,10 +23,9 @@
         <%= form.number_field :notice_period %>
       </div>
 
-
       <div>
-        <%= form.label :cv, style: "display: block" %>
-        <%= form.file_field :cv %>
+        <%= form.label :resume, style: "display: block" %>
+        <%= form.file_field :resume %>
       </div>
 
       
