--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -14,20 +14,17 @@
       <%= @job.description.html_safe %>
     </div>
     
-    <%= link_to 'Apply to this job', new_job_apply_path(params[:id]), class:"button is-rounded is-large is-fullwidth is-link" %>
-    
-
+    <%if !current_user.try(:role)%>
+      <% if @job.applies.where(user_id: current_user.id).present? %>
+        <p style="color:red">You have already apllied to this job</p>
+      <% else %>
+        <%= link_to 'Apply to this job', new_job_apply_path(params[:id]), class:"button is-rounded is-large is-fullwidth is-link" %>
+      <% end %>
+    <% end %>
   </div>
 
   <div class="column is-2 is-offset-1 has-text-centered">
-
-    
-
     <h5 class="is-5 has-text-centered"><%= @job.job_author %></h5>
-
-
-
-    
     <% if current_user.try(:admin) %>
       <ul class="pv3">
         <li class="pv1 f6">Admin controls: </li>
@@ -42,20 +39,33 @@
   </div>
 </div>
 
-<div>
-  <% if current_user.role == true%>
-    <% @job.applies.each do |apply| %>
-      
-        <h5 class="card-title"><%= apply.name%></h5>
-        <p class="card-text">Skills: <%= apply.skills%></p>
-        <p class="card-text">About Yourself: <%= apply.about_yourself%></p>
-        <p class="card-text">Notice Period: <%=apply.notice_period%> Months</p>
-       
-        <%= link_to "Accept", accept_apply_path(id: apply.id), method: :get, class: "btn btn-success btn-sm mr-2" %>
-        <%= link_to "Reject", reject_apply_path(id: apply.id), method: :get, class: "btn btn-danger btn-sm mr-2" %>
-       
-      
-    <%end%>
-
-  <% end %>
-</div>
+<% if user_signed_in?%>
+  <div >
+    
+    <% if current_user.role == true && (current_user.id == @job.user_id)%>
+      <% @job.applies.each do |apply| %>
+        <div class=card>
+          <h5 class="card-title"><%= apply.name%></h5>
+          <p class="card-text">Skills: <%= apply.skills%></p>
+          <p class="card-text">About Yourself: <%= apply.about_yourself%></p>
+          <% if apply.resume.persisted?%>
+           <%= image_tag(apply.resume) %>
+          <%end%>
+          
+          
+          <%if apply.status == 'accepted'%>
+              <h3>You have already accepted this application</h3>
+            <%elsif apply.status == 'rejected'%>
+              <h3>You have already rejected this application</h3>
+            <%else%>
+              <div class="mt-4">
+                <%= link_to "Accept", accept_apply_path(id: apply.id), method: :get, class: "btn btn-success btn-sm mr-2" %>
+                <%= link_to "Reject", reject_apply_path(id: apply.id), method: :get, class: "btn btn-danger btn-sm mr-2" %>
+              
+              </div>
+            <%end%>
+        </div>
+      <%end%>
+    <% end %>
+  </div>
+<%end%>
