--- a/app/views/user_mailer/confirm_apply.html.erb
+++ b/app/views/user_mailer/confirm_apply.html.erb
@@ -5,8 +5,10 @@
   </head>
   <body>
     <p>
-      <%= @user.name%>,You have successfully Signed Up in Job Portal.
+   
+      <%= @user.name%>,You have successfully applied to the <%=@job.title %> job.
+    
     </p>
-    <p>Thanks for Creating account and have a great day!.</p>
+    <p>Thanks for Applying and have a great day!.</p>
   </body>
 </html>
