--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,10 +1,11 @@
 .ab{
     color: blue
 }
-.photo{
-    height: 100px;
-    width:100px;
-}
+
+/* img{
+    width:100%;
+    height:100%;
+} */
 
 /* #jobs{
     position: relative;
@@ -17,12 +18,12 @@
     transition: box-shadow .2s linear;
     border: none;
 } */
+
  .columns{
     background-color: rgb(201, 226, 248);
     justify-content: center;
     align-items: center;
 } 
-
 
 .panel1 {
     margin-bottom: 20px;
@@ -32,8 +33,6 @@
     -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
 }
-
-
 
 .app_head{
     margin: 20px auto;
@@ -48,10 +47,11 @@
     border: 2px solid black;
     width: 80%;
     border-radius: 19px;
-    height: 14rem;
+    height: 15rem;
     font-family: system-ui;
   
 }
+
 .card-title{
     font-size: 21px;
     margin-left: 21px;
@@ -70,7 +70,3 @@
 .form-job{
     background-color: aliceblue;
 }
-
-
-
-
