Code updated with rubocop

--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -2,6 +2,7 @@
   <div class="column is-2 bg-light">
     <div class="pl3 pr1">
      <%= render 'panel' %>
+     <%= render 'search' %>
     </div>
   </div>
 
