--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -6,38 +6,33 @@
     </div>
   </div>
 
-  
-
   <div class="column is-9 pl6">
     <% @jobs.each do |job| %>
-    <div class="columns border-bottom pt4">
-      
-      <div class="column is-8">
-        <h3 class="title is-4 index-title"><%= link_to job.title, job %></h3>
-          <ul>
-            <li><%= job.job_company %> ||  <%= job.job_author %> || <%= job.location%>  || <%=job.salary%>LPA </li>
-          </ul>
-        <div class="pv2 f6">
-          <%= sanitize(job.description.truncate(70, separator: '</p>')) %>
-        </div>
+      <% cache job do %>
+      <div class="columns border-bottom pt4">
+        <div class="column is-8">
+          <h3 class="title is-4 index-title"><%= link_to job.title, job %></h3>
+            <ul>
+              <li><%= job.job_company %> ||  <%= job.job_author %> || <%= job.location%>  || <%=job.salary%>LPA </li>
+            </ul>
+          <div class="pv2 f6">
+            <%= sanitize(job.description.truncate(70, separator: '</p>')) %>
+          </div>
 
-        <% if current_user.try(:admin) %>
-          <ul class="pv3">
-            <li class="inline-block f6">Admin controls: </li>
-            <li class="inline-block">
-              <%= link_to 'View', job, class: 'button is-small is-link is-outlined' %></li>
-            <li class="inline-block">
-              <%= link_to 'Edit', edit_job_path(job), class: 'button is-small is-link is-outlined' %></li>
-            <li class="inline-block">
-              <%= link_to 'Delete', job, method: :delete, data: { confirm: 'Are you sure?' }, class: 'button is-small is-link is-outlined' %></li>
-          </ul>
-        <% end %>
-
+          <% if current_user.try(:admin) %>
+            <ul class="pv3">
+              <li class="inline-block f6">Admin controls: </li>
+              <li class="inline-block">
+                <%= link_to 'View', job, class: 'button is-small is-link is-outlined' %></li>
+              <li class="inline-block">
+                <%= link_to 'Edit', edit_job_path(job), class: 'button is-small is-link is-outlined' %></li>
+              <li class="inline-block">
+                <%= link_to 'Delete', job, method: :delete, data: { confirm: 'Are you sure?' }, class: 'button is-small is-link is-outlined' %></li>
+            </ul>
+          <% end %>
         </div>
       </div>
-      <hr>
-      
-      
-    <% end %>
-    
+      <% end %>
+        <hr>
+    <% end %>      
 </div>
